@@ -97,13 +97,13 @@ override_dh_install:
 		debian/ntpsec/lib/systemd/system/ntpsec.service
 	install -m 644 \
 		etc/ntp-wait.service \
-		debian/ntpsec/lib/systemd/system/
+		debian/ntpsec/lib/systemd/system/ntpsec-wait.service
 	install -m 644 \
-		debian/ntpsec.ntp-rotate-stats.service \
-		debian/ntpsec/lib/systemd/system/ntp-rotate-stats.service
+		debian/ntpsec.ntpsec-rotate-stats.service \
+		debian/ntpsec/lib/systemd/system/ntpsec-rotate-stats.service
 	install -m 644 \
-		debian/ntpsec.ntp-rotate-stats.timer \
-		debian/ntpsec/lib/systemd/system/ntp-rotate-stats.timer
+		debian/ntpsec.ntpsec-rotate-stats.timer \
+		debian/ntpsec/lib/systemd/system/ntpsec-rotate-stats.timer
 
 	install -d debian/ntpsec-ntpviz/lib/systemd/system
 	install -m 644 \
